--- a/public/index.html
+++ b/public/index.html
@@ -16,33 +16,9 @@
     <link href='/css/styles.css' rel='stylesheet'>
     <link href='/css/animate.css' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-    <style>
-        /* Posisi tombol di pojok kiri */
-        .corner-button {
-            position: absolute;
-            top: 10px; /* Jarak dari atas */
-            left: 10px; /* Jarak dari kiri */
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
-        .corner-button:hover {
-            background-color: #0056b3;
-        }
-    </style>
-</head>
-
-<body>
-    <!-- Tombol di pojok kiri -->
-    <button class="corner-button" onclick="alert('Hello!')">Click Me</button>
 
     <div class="center">
-        <h1 class="animated strobe"> Katashi API </h1>
+        <h1 class="animated strobe"> Rioo API </h1>
         <div class="description">
             Free Rest API for various purposes, use <b>Katashi</b> as apikey.</a>
         </div>
