--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
                 <div class="select">
                     <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                      <option value="" selected disabled>--- AI ---</option>
-                     <option value="/api/ai/gptturbo?query=hallo">Gptturbo</option>
+                     <option value="/api/ai/gptturbo?query=hallo&apikey=RiooAjah">Gptturbo</option>
                      <option value="/api/video?q=drxgs&apikey=Katashi">Video</option>
                      <option value="/api/yta?url=https://youtu.be/SRQmwK8Z5Nw&apikey=Katashi">Youtube MP3</option>
                      <option value="/api/ytv?url=https://youtu.be/SRQmwK8Z5Nw&apikey=Katashi">Youtube MP4</option>
