--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
     <div class="center">
         <h1 class="animated strobe"> Rioo API </h1>
         <div class="description">
-            Free Rest API for various purposes, use <b>Rioo Api</b> as apikey.</a>
+            Free Rest API for various purposes, use <b>Rioo Api</b> as No Apikey.</a>
         </div>
         <div class="controls">
             <form>
                 <div class="select">
                     <select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
                      <option value="" selected disabled>--- AI ---</option>
-                     <option value="/api/gptturbo?query=hallo&apikey=RiooAjah">Gptturbo</option>
+                     <option value="/api/gptturbo?message=hallo">Gptturbo</option>
                      <option value="/api/video?q=drxgs&apikey=Katashi">Video</option>
                      <option value="/api/yta?url=https://youtu.be/SRQmwK8Z5Nw&apikey=Katashi">Youtube MP3</option>
                      <option value="/api/ytv?url=https://youtu.be/SRQmwK8Z5Nw&apikey=Katashi">Youtube MP4</option>
